--- a/123/index.html
+++ b/123/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="HEXO搭建准备">
 <meta property="og:type" content="article">
 <meta property="og:title" content="hexo搭建系列（一）">
-<meta property="og:url" content="http://www.fanegin.top/123/index.html">
+<meta property="og:url" content="http://fanegin.github.iop/123/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="HEXO搭建准备">
 <meta property="og:locale" content="zh_CN">
