--- a/GUNDAM/index.html
+++ b/GUNDAM/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="GUNDAM">
 <meta property="og:type" content="article">
 <meta property="og:title" content="GUNDAM">
-<meta property="og:url" content="http://www.fanegin.top/GUNDAM/index.html">
+<meta property="og:url" content="http://fanegin.github.io/GUNDAM/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="GUNDAM">
 <meta property="og:locale" content="zh_CN">
