--- a/LEDCONTROL1/index.html
+++ b/LEDCONTROL1/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="引言在之前做读写的时候我们具体谢啦如何调用LED服务特性的函数，今天我们就要具体细化这个函数来控制BBC开发板矩阵的行和列">
 <meta property="og:type" content="article">
 <meta property="og:title" content="控制BBC开发板矩阵的行和列">
-<meta property="og:url" content="http://www.fanegin.top/LEDCONTROL1/index.html">
+<meta property="og:url" content="http://faneGin.github.io/LEDCONTROL1/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="引言在之前做读写的时候我们具体谢啦如何调用LED服务特性的函数，今天我们就要具体细化这个函数来控制BBC开发板矩阵的行和列">
 <meta property="og:locale" content="zh_CN">
