--- a/LEDCONTROL2/index.html
+++ b/LEDCONTROL2/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="引言上一篇我们具体控制了BBC开发板矩阵的行和列，这次我们将继续细化LED，来做到控制单个LED。">
 <meta property="og:type" content="article">
 <meta property="og:title" content="控制BBC开发板上的任意一LED小灯">
-<meta property="og:url" content="http://www.fanegin.top/LEDCONTROL2/index.html">
+<meta property="og:url" content="http://faneGin.github.io/LEDCONTROL2/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="引言上一篇我们具体控制了BBC开发板矩阵的行和列，这次我们将继续细化LED，来做到控制单个LED。">
 <meta property="og:locale" content="zh_CN">
