--- a/PY.html/index.html
+++ b/PY.html/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="友情链接">
 <meta property="og:type" content="article">
 <meta property="og:title" content="友情链接">
-<meta property="og:url" content="http://www.fanegin.top/PY.html/index.html">
+<meta property="og:url" content="http://faneGin.github.io/PY.html/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="友情链接">
 <meta property="og:locale" content="zh_CN">
