--- a/about.html/index.html
+++ b/about.html/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="关于">
 <meta property="og:type" content="article">
 <meta property="og:title" content="关于">
-<meta property="og:url" content="http://www.fanegin.top/about.html/index.html">
+<meta property="og:url" content="http://faneGin.github.io/about.html/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="关于">
 <meta property="og:locale" content="zh_CN">
