--- a/accelerometer1/index.html
+++ b/accelerometer1/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="加速度计显示">
 <meta property="og:type" content="article">
 <meta property="og:title" content="加速度值的显示">
-<meta property="og:url" content="http://www.fanegin.top/accelerometer1/index.html">
+<meta property="og:url" content="http://faneGin.github.io/accelerometer1/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="加速度计显示">
 <meta property="og:locale" content="zh_CN">
