--- a/danger/index.html
+++ b/danger/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="紧急 ！紧急！紧急！">
 <meta property="og:type" content="article">
 <meta property="og:title" content="修改Hosts文件临时解决Github图床无法访问查看的问题">
-<meta property="og:url" content="http://www.fanegin.top/danger/index.html">
+<meta property="og:url" content="http://faneGin.github.io/danger/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="紧急 ！紧急！紧急！">
 <meta property="og:locale" content="zh_CN">
