--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="Welcome to Hexo! This is your very first post. Check documentation for more info. If you get any problems when using Hexo, you can find the answer in troubleshooting or you can ask me on GitHub.">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Hello World">
-<meta property="og:url" content="http://www.fanegin.top/hello-world/index.html">
+<meta property="og:url" content="http://faneGin.github.io/hello-world/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="Welcome to Hexo! This is your very first post. Check documentation for more info. If you get any problems when using Hexo, you can find the answer in troubleshooting or you can ask me on GitHub.">
 <meta property="og:locale" content="zh_CN">
