--- a/hexo/index.html
+++ b/hexo/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="将hexo部署到GitHub">
 <meta property="og:type" content="article">
 <meta property="og:title" content="hexo搭建系列(二)">
-<meta property="og:url" content="http://www.fanegin.top/hexo/index.html">
+<meta property="og:url" content="http://faneGin.github.io/hexo/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="将hexo部署到GitHub">
 <meta property="og:locale" content="zh_CN">
