--- a/houalang/index.html
+++ b/houalang/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="你配的上后浪吗？">
 <meta property="og:type" content="article">
 <meta property="og:title" content="关于后浪一谈">
-<meta property="og:url" content="http://www.fanegin.top/houalang/index.html">
+<meta property="og:url" content="http://faneGin.github.io/houalang/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="你配的上后浪吗？">
 <meta property="og:locale" content="zh_CN">
