--- a/micro1/index.html
+++ b/micro1/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="micro:bit如何进行设备连接">
 <meta property="og:type" content="article">
 <meta property="og:title" content="micro:bit设备连接">
-<meta property="og:url" content="http://www.fanegin.top/micro1/index.html">
+<meta property="og:url" content="http://faneGin.github.io/micro1/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="micro:bit如何进行设备连接">
 <meta property="og:locale" content="zh_CN">
