--- a/micro2/index.html
+++ b/micro2/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="micro:bit的服务和特性">
 <meta property="og:type" content="article">
 <meta property="og:title" content="micro:bit的服务和特性">
-<meta property="og:url" content="http://www.fanegin.top/micro2/index.html">
+<meta property="og:url" content="http://faneGin.github.io/micro2/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="micro:bit的服务和特性">
 <meta property="og:locale" content="zh_CN">
