--- a/service1/index.html
+++ b/service1/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="在上一篇中我们主要了了解micro:bit的的服务特性，今天我们主要用micro:bit的几个特性来读取以及改写">
 <meta property="og:type" content="article">
 <meta property="og:title" content="micro:bit的读写特性">
-<meta property="og:url" content="http://www.fanegin.top/service1/index.html">
+<meta property="og:url" content="http://faneGin.github.io/service1/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="在上一篇中我们主要了了解micro:bit的的服务特性，今天我们主要用micro:bit的几个特性来读取以及改写">
 <meta property="og:locale" content="zh_CN">
