--- a/wutuo/index.html
+++ b/wutuo/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="1950年，一位名叫约翰·卡尔霍恩的美国地震学家创造了一系列实验，以测试人口过剩对社会动物行为的影响。卡尔霍恩选择的动物，他的实验，其中老鼠（和后来的老鼠）。他选择啮齿动物，因为这些繁殖迅速，从而允许他观察几代小鼠在相对较短的时间空间的发展。">
 <meta property="og:type" content="article">
 <meta property="og:title" content="人类能从老鼠乌托邦中认识到什么">
-<meta property="og:url" content="http://www.fanegin.top/wutuo/index.html">
+<meta property="og:url" content="http://faneGin.github.io/wutuo/index.html">
 <meta property="og:site_name" content="GUNDAM">
 <meta property="og:description" content="1950年，一位名叫约翰·卡尔霍恩的美国地震学家创造了一系列实验，以测试人口过剩对社会动物行为的影响。卡尔霍恩选择的动物，他的实验，其中老鼠（和后来的老鼠）。他选择啮齿动物，因为这些繁殖迅速，从而允许他观察几代小鼠在相对较短的时间空间的发展。">
 <meta property="og:locale" content="zh_CN">
